tests/error/result_errors/state_result_empty.py
from guppylang.std.debug import state_result
from tests.util import compile_guppy

@compile_guppy
def main() -> None:
    state_result("tag")
